@startuml
'https://plantuml.com/class-diagram

class Member
class MemberRepository
class BasicAuthenticationInterceptor
class UsernamePasswordAuthenticationInterceptor

'interface UserDetails
'interface UserDetailsService

Member <- MemberRepository

MemberRepository <-- BasicAuthenticationInterceptor
MemberRepository <-- UsernamePasswordAuthenticationInterceptor

Member <-- BasicAuthenticationInterceptor
Member <-- UsernamePasswordAuthenticationInterceptor

@enduml